# X4Mcp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
extension/: content.xml  ui.xml  x4mcp_config.json  x4native.json
extension/ui/: x4mcp.lua
scripts/: build_deploy.ps1  build_run.ps1
src/: config.cpp  config.h  game_commands.cpp  game_commands.h  main.cpp  mcp_server.cpp  mcp_server.h
